small fixes
added auto inserting to roles, contacts page, accaunt page and connect backend, frontend